fix some bug such as overflow and shadow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
-.navbar-nav.shadow{
-    box-shadow: 0px 4px 44px 0px rgba(0,0,0,.14)
+.navbar{
+    z-index: 1000;
 }
 
 .navbar-nav > li {
@@ -15,6 +15,10 @@
     margin-bottom: 2px;
 }
 
+.slide{
+    z-index: 1;
+}
+
 .h-100{
     height: 100vh !important;
 }
@@ -23,6 +27,7 @@
     opacity: 0;
     position: relative;
     transition: all 0.4s ease-in-out 0s;
+    overflow: hidden;
 }
 
 .scrollanimate .from-left {
